--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
 
   <title>Assignment 5</title>
 
-  <!-- Tailwind + DaisyUI CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.js"></script>
 
-  <link rel="stylesheet" href="styles.css">
 
-  <!-- JS Scripts -->
 
   <script src="./script.js" defer></script>
 
@@ -47,7 +44,9 @@
       </div>
 
       <div class="rounded-full flex items-center sm:space-x-2 px-5 py-3 sm:px-4 sm:py-2 bg-green-600">
-        <span class="text-white font-semibold text-xs sm:text-base">2 Copy</span>
+        <span class="text-white font-semibold text-xs sm:text-base">
+          <span id="copy-count">2</span> Copy
+        </span>
       </div>
     </div>
 
@@ -88,7 +87,7 @@
 
         </div>
 
-        <p class="font-bold text-[18px] md:text-[28px] card-title">National Emergency Number</p>
+        <p class="font-bold text-[18px] md:text-[24px] card-title">National Emergency Number</p>
         <p class="font-light">National Emergency</p>
         <p class="font-bold text-[18px] md:text-[24px] pt-3 card-number">999</p>
         <button class="btn btn-square" style="background-color: #f2f2f2;">
@@ -97,11 +96,13 @@
 
         <div class="flex justify-center space-x-4 items-center pt-2 ">
 
-          <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+          <button class="copy-btn flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style="width: 180px; height: 40px; ">
             <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
           </button>
+
+
 
           <button class="call-button flex items-center justify-center space-x-2 rounded-lg"
             style="width: 180px; height: 40px; background-color: #00A63E; color: white;">
@@ -132,7 +133,7 @@
 
         <div class="flex justify-center space-x-4 pt-2 ">
 
-          <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+          <button class="copy-btn flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style="width: 200px; height: 40px; ">
             <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
@@ -167,7 +168,7 @@
 
         <div class="flex justify-center space-x-4 pt-2 ">
 
-          <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+          <button class="copy-btn flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style=" width:200px; height: 40px; ">
             <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
@@ -221,15 +222,15 @@
 
         <div class="flex justify-center space-x-4 pt-2 ">
 
-          <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
-            style="width: 200px; height: 40px; ">
+          <button class="copy-btn flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+            style=" width:200px; height: 40px; ">
             <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
           </button>
 
 
 
-          <button class="flex items-center justify-center space-x-2 rounded-lg call-button"
+          <button class=" flex items-center justify-center space-x-2 rounded-lg call-button"
             style="width: 200px; height: 40px; background-color: #00A63E; color: white;">
             <img src="assets/phone_2.png" alt="Phone Call" class="h-5 w-5">
             <span class="font-normal">Call</span>
@@ -256,7 +257,7 @@
 
         <div class="flex justify-center space-x-4 pt-2 ">
 
-          <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+          <button class="copy-btn flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style="width: 200px; height: 40px; ">
             <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
@@ -291,7 +292,7 @@
 
         <div class="flex justify-center space-x-4 pt-2 ">
 
-          <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+          <button class="copy-btn flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style="width: 200px; height: 40px; ">
             <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
@@ -326,7 +327,7 @@
 
         <div class="flex justify-center space-x-4 pt-2 ">
 
-          <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+          <button class="copy-btn flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style="width: 200px; height: 40px; ">
             <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
@@ -361,7 +362,7 @@
 
         <div class="flex justify-center space-x-4 pt-2 ">
 
-          <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+          <button class="copy-btn flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style="width: 200px; height: 40px; ">
             <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
@@ -396,7 +397,7 @@
 
         <div class="flex justify-center space-x-4 pt-2 ">
 
-          <button class="flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
+          <button class="copy-btn flex items-center justify-center space-x-2 rounded-lg border-2 border-gray-230"
             style="width: 200px; height: 40px; ">
             <img src="assets/copy.png" alt="Copy" class="h-5 w-5">
             <span class="font-normal">Copy</span>
